--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,14 @@
 {
 	"env": {
-		"node": true,
-		"browser": true
+		"node": true
 	},
-	"plugins": ["prettier"],
-	"extends": ["eslint:recommended", "prettier"],
-	"parser": "@",
+	"plugins": ["@typescript-eslint", "prettier"],
+	"extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaVersion": 2020,
+		"sourceType": "module"
+	},
 	"rules": {
 		"prettier/prettier": "warn"
 	}
