--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
 	"author": "solo5star <solo_5@naver.com>",
 	"license": "MIT",
 	"private": true,
+	"main": "./build/index.js",
+	"types": "./build/index.d.ts",
 	"scripts": {
 		"example": "ts-node src/example.ts",
 		"lint": "eslint .",
-		"test": "jest --runInBand"
+		"test": "jest --runInBand",
+		"build": "tsc",
+		"postinstall": "tsc"
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
