--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"axios": "^0.21.1",
 		"axios-cookiejar-support": "^1.0.1",
 		"axios-logger": "^2.5.0",
+		"date-fns": "^2.23.0",
 		"dotenv": "^10.0.0",
 		"js-video-url-parser": "^0.4.3",
 		"jsdom": "^17.0.0",
