--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
 		"postinstall": "tsc"
 	},
 	"dependencies": {
-		"@types/jsdom": "^16.2.13",
 		"@types/node": "^16.7.2",
 		"@types/qs": "^6.9.7",
 		"@types/tough-cookie": "^4.0.1",
@@ -30,7 +29,7 @@
 		"date-fns": "^2.23.0",
 		"dotenv": "^10.0.0",
 		"js-video-url-parser": "^0.4.3",
-		"jsdom": "^17.0.0",
+		"node-html-parser": "^4.1.4",
 		"qs": "^6.10.1",
 		"tough-cookie": "^4.0.0"
 	},
