--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"axios-logger": "^2.5.0",
 		"date-fns": "^2.23.0",
 		"dotenv": "^10.0.0",
+		"form-data": "^4.0.0",
 		"js-video-url-parser": "^0.4.3",
 		"node-html-parser": "^4.1.4",
 		"qs": "^6.10.1",
